changed colors and added location icon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="centralizeitens">
             <div class="menuItens">
                 <div class="pais">
-                    <span id="country"></span><h1 class="hifen">-</h1><span id="flagPais"></span>
+                    <span style="color: #1E3050; margin-top: 25px; margin-left: 2ch;"><i class="fa-solid fa-location-dot"></i></span><span id="country"></span><h1 class="hifen">-</h1><span id="flagPais"></span>
                 </div>
                 <div class="conteudoClima">
                     <img src="https://openweathermap.org/img/wn/04d@2x.png" id="imagemBox">
